// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`panel component 1`] = `
<section
  className="Container--Simple"
>
  <header
    className="Header"
    onClick={null}
  >
    <span
      className="Title"
    >
      Header
    </span>
  </header>
  <div
    className="Container"
  >
    Content
  </div>
</section>
`;

exports[`panel component 2`] = `
<section
  className="Container--Inverse"
>
  <header
    className="Header"
    onClick={null}
  >
    <span
      className="Title"
    >
      Header
    </span>
  </header>
  <div
    className="Container"
  >
    Content
  </div>
</section>
`;

exports[`panel component 3`] = `
<section
  className="Container--Simple"
>
  <header
    className="Header"
    onClick={null}
  >
    <span
      className="Title"
    >
      Header
    </span>
  </header>
  <div
    className="Container"
  >
    Content
  </div>
</section>
`;

exports[`panel component 4`] = `
<section
  className="Container--Inverse"
>
  <header
    className="Header"
    onClick={null}
  >
    <span
      className="Title"
    >
      Header
    </span>
  </header>
  <div
    className="Container"
  >
    Content
  </div>
</section>
`;

exports[`panel component 5`] = `
<section
  className="Container--Simple--Expandable"
>
  <header
    className="Header"
    onClick={[Function]}
  >
    <button
      className="Expand Subtile"
    >
      <svg
        fill="none"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          fill="#245EAC"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
    <span
      className="Title"
    >
      Header
    </span>
  </header>
  <div
    className="Container"
  >
    Content
  </div>
</section>
`;

exports[`panel component 6`] = `
<section
  className="Container--Inverse--Expandable"
>
  <header
    className="Header"
    onClick={[Function]}
  >
    <button
      className="Expand Subtile"
    >
      <svg
        fill="none"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          fill="#245EAC"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
    <span
      className="Title"
    >
      Header
    </span>
  </header>
  <div
    className="Container"
  >
    Content
  </div>
</section>
`;
